@@ -2,6 +2,29 @@ download rubymine2018.1.4 version from given link
 https://www.jetbrains.com/ruby/download/other.html
 )Add following line at the end of "Help->Edit Custom VM Options" file
 -javaagent:/home/bilal/Downloads/JetbrainsCrack-2.9-release-en.jar (instead of bilal use username of laptop,path location where file is present)
+
+example 
+----------------------------------
+# custom RubyMine VM options
+
+-Xms128m
+-Xmx750m
+-XX:ReservedCodeCacheSize=240m
+-XX:+UseConcMarkSweepGC
+-XX:SoftRefLRUPolicyMSPerMB=50
+-ea
+-Dsun.io.useCanonCaches=false
+-Djava.net.preferIPv4Stack=true
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:-OmitStackTraceInFastThrow
+-Dawt.useSystemAAFontSettings=lcd
+-Dsun.java2d.renderer=sun.java2d.marlin.MarlinRenderingEngine
+-javaagent:/home/aks-it-147/work/RubyMine-2018.1.4/JetbrainsCrack-2.9-release-en.jar
+
+----------------------------------------------------------------------------------
+
+
+
 3)Restart RubyMine 
 4)Click => Enter key Option
 5)middle eveluation key click and paste code of "activation_code.json" file (Change licence name in file i-e (Hafiz Muhammad Bilal))
